# cookiecutter-cpp-vcpkg

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/cookiecutter-cpp-vcpkg/: cookiecutter_cpp_vcpkg.hpp
resources/nsis/: nsis.template.in  nsis_definitions.nsh.in
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_main.cpp
